# aoc_2023

./: .ocamlformat  README.md  _opam  dune-project  dune-workspace
lib/: dune
lib/day1/: dune  main.ml
lib/day2/: day2.ml  dune  main.ml
lib/day3/: day3.ml  dune  main.ml
lib/day4/: day4.ml  dune  inputs.ml
lib/day5/: day5.ml  dune  inputs.ml
lib/day6/: day6.ml  dune  inputs.ml
lib/day7/: day7.ml  dune  inputs.ml
lib/day8/: day8.ml  dune  inputs.ml
lib/dayx/: dayx.ml  dune  inputs.ml
test/: dune
