(lang dune 3.12)

(name aoc_2023)

(generate_opam_files false)

(source
 (github smolkaj/aoe_2023))

(authors "Steffen Smolka")

(maintainers "Steffen Smolka")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name aoc_2023)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
